--- a/PAGES/login.html
+++ b/PAGES/login.html
@@ -3,27 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="/CSS/login.css">
+    <title>Mashina guruhi</title>
 </head>
 <body>
-    <h1 class="log_text">
-        Uz Avto 
-        onlayn
-    </h1>
-
-    <div class="fatherlogindiv">
-        <form id="form">
-            <div class="logindiv">
-                <h1 class="fatherlogin_h1">Login</h1>
-                <p class="fatherlogin_p">Iltimos login qilayotganingizda togri login parolni kiriting!</p>
-                <input name="username" placeholder="email" class="fatherlogin_input" type="text">
-                <input name="password" placeholder="password" class="fatherlogin_input" type="password">
-                <button id="button" class="fatherlogin_button">Login qilish</button>
-            </div>
-        </form>
-        <div><img class="carlogo" src="/IMAGES/car_logo.png" alt=""></div>
-        <script src="/JS/login.js"></script>
     </div>
 </body>
 </html>
