--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
                 <button id="button" class="fatherlogin_button">Login qilish</button>
             </div>
         </form>
-        <div><img class="carlogo" src="/IMAGES/car_logo.png" alt=""></div>
+        <div><img class="carlogo" src="/image/car_logo.png" alt=""></div>
         <script src="/JS/login.js"></script>
 </body>
 </html>
