--- a/PAGES/home.html
+++ b/PAGES/home.html
@@ -6,6 +6,8 @@
     <title>Mashina guruhi</title>
 </head>
 <body>
-    </div>
+    
+    <script src="/JS/app.js"></script>
+    
 </body>
 </html>
