--- a/main.html
+++ b/main.html
@@ -3,26 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>salom</title>
     <link rel="stylesheet" href="/CSS/login.css">
 </head>
 <body>
-    <h1 class="log_text">
-        Uz Avto 
-        onlayn
-    </h1>
 
-    <div class="fatherlogindiv">
-        <form id="form">
-            <div class="logindiv">
-                <h1 class="fatherlogin_h1">Login</h1>
-                <p class="fatherlogin_p">Iltimos login qilayotganingizda togri login parolni kiriting!</p>
-                <input name="username" placeholder="email" class="fatherlogin_input" type="text">
-                <input name="password" placeholder="password" class="fatherlogin_input" type="password">
-                <button id="button" class="fatherlogin_button">Login qilish</button>
-            </div>
-        </form>
-        <div><img class="carlogo" src="/image/car_logo.png" alt=""></div>
-        <script src="/JS/login.js"></script>
 </body>
 </html>
