--- a/main.html
+++ b/main.html
@@ -3,10 +3,194 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>salom</title>
-    <link rel="stylesheet" href="/CSS/login.css">
+    <title>Asosiy oyna</title>
+    <link rel="stylesheet" href="/CSS/home.css">
 </head>
 <body>
+    <div class="header_div">
+        <h1 class="log_text">
+            Uz Avto 
+            onlayn
+        </h1>
+        <input placeholder="Qidiruv" class="header_input" type="search"></input>
+        <button class="header_btn"><a class="header_link" href="/PAGES/add.html">Mashina qo’shish</a></button>
+    </div>
 
+    <div class="car_sec">
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+    </div>
+
+    <div class="car_sec">
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+    </div>
+
+    <div class="car_sec">
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+    </div>
+
+    <div class="car_sec">
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+    </div>
+
+    <div class="car_sec">
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+
+        <div class="car_div">
+            <div class="car_div_ch">
+                <img class="logo" src="/image/damas.svg" alt="">
+                <div class="car_name">
+                    <div><h1 class="name">Damas</h1></div>
+                    <div><h1 class="name">chevrolet</h1></div>
+                    <div><h1 class="name">96 932 000</h1></div>
+                </div>                       
+            </div>
+        </div>
+    </div>
+    <script src="/JS/app.js" type="module"></script>
+    <script type="module" src="/JS/login.js"></script>
 </body>
 </html>
