--- a/PAGES/home.html
+++ b/PAGES/home.html
@@ -23,7 +23,8 @@
             </div>
         </form>
         <div><img class="carlogo" src="/image/car_logo.png" alt=""></div>
-        <script src="/JS/login.js"></script>
-        <script src="/JS/app.js"></script>
+        <script src="/JS/login.js" type="module"></script>
+        <script src="/JS/request.js" type="module"></script>
+
 </body>
 </html>
