--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
             onlayn
         </h1>
         <input placeholder="Qidiruv" class="header_input" type="search"></input>
-        <button class="header_btn"><a class="header_link" href="/PAGES/add.html">Mashina qo’shish</a></button>
+        <button id="btn" class="header_btn">Mashina qo’shish</button>
     </div>
 
     <div class="car_sec">
